# JammerBox-System

./: .clang-format  .gitignore  Configure.sh  README.md  Run.sh
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: add-issues-to-proj.yml  auto-link-PRs.yml  node-JS-CI.yml  node.js.yml
Ancien PIR/: README.md
Ancien PIR/src/interface/src/failures/: CMakeLists.txt
Ancien PIR/src/interface/src/failures/tests/: CMakeLists.txt
Ancien PIR/src/interface/src/results/: CMakeLists.txt
CompilationWithSTM32CubeIDE/: .cproject  .mxproject  .project  CompilationWithSTM32CubeIDE.ioc
CompilationWithSTM32CubeIDE/Debug/: makefile  objects.list  sources.mk
Documentation/continental/: UART_ProtocolOverview.xlsx  port_mapping.xlsx
Documentation/dependency-graphs/: global.puml
Documentation/html/: config_8h__dep__incl.md5  failures_8c__incl.md5  failures_8c_a124dbbcadfb06406cf91d1201bb05c68_cgraph.md5  failures_8c_a124dbbcadfb06406cf91d1201bb05c68_icgraph.md5  failures_8c_a155e0b42be698fd658fea6a0dbb8608b_cgraph.md5  failures_8c_a30f15834dbe25caba85572e172b9bc77_cgraph.md5  failures_8c_a3484fce8f4223ea262d178cbea751f06_icgraph.md5  failures_8c_a3714f6c2b6cf52e7944ee9352143e105_icgraph.md5  failures_8c_a440cfd86084b45c9b92dd2ab0c845eb2_icgraph.md5  failures_8c_a497fcda22de215e3e57f4ba889f23675_cgraph.md5  failures_8c_a497fcda22de215e3e57f4ba889f23675_icgraph.md5  failures_8c_a682f1aff804ad2665cb73cb7aa0bb324_icgraph.md5  failures_8c_a6860c587b4f4392d32023e84e5e0dcfc_cgraph.md5  failures_8c_a7a130c71bb4f8b503445fa58eeea5f1c_cgraph.md5  failures_8c_a9b4c0604e27a0e274bb04bf3d34b22d6_icgraph.md5  failures_8c_aa7a19058315d33f9c47e8628e709d5d4_icgraph.md5  failures_8c_ab03c344f7040d93549b7a6fc4816b61b_icgraph.md5  failures_8c_ab58329ba2cc19b5be493a8a632f996f9_cgraph.md5  failures_8c_ab67a5788e21fda86360207c9df71f75a_icgraph.md5  failures_8c_ad206b129f04322b488059719a3757196_cgraph.md5  failures_8c_ad206b129f04322b488059719a3757196_icgraph.md5  failures_8c_ad459ce1c26c453348a480e21725663b0_icgraph.md5  failures_8c_ae262fe3c8a33d712da32a37e77fbd065_icgraph.md5  failures_8c_af07c1aaf230fb87af99aa7ef5816decb_icgraph.md5  failures_8h__dep__incl.md5  failures_8h_a09b976185e7e818b4324aee696332f9a_icgraph.md5  failures_8h_a15b6582de1d12a5c4160bad4c817bb5c_cgraph.md5  failures_8h_a2be0b8a63928eac32b771de2ea429cd4_cgraph.md5  failures_8h_a2be0b8a63928eac32b771de2ea429cd4_icgraph.md5  failures_8h_a494682d906c6e4e666f46a15c2aed5eb_icgraph.md5  failures_8h_a6ea522e6a341dc0a0c127e8892f44c11_icgraph.md5  failures_8h_a7739e18fdabcefcde3ee26001bd58edc_cgraph.md5  failures_8h_a7739e18fdabcefcde3ee26001bd58edc_icgraph.md5  failures_8h_a927fa488675a8a6fbd8bba8efb983f5d_cgraph.md5  failures_8h_aa70632cb81cd10d58b42b00becf53367_cgraph.md5  failures_8h_aae7f39efa073aa6122e590548bf2539d_icgraph.md5  failures_8h_aaedcc3fbf68595dee835b43fea8bd48c_icgraph.md5  failures_8h_ab58329ba2cc19b5be493a8a632f996f9_icgraph.md5  failures_8h_ace7d5fffa73e97bc37f6432a03b36d51_cgraph.md5  failures_8h_ae262fe3c8a33d712da32a37e77fbd065_cgraph.md5  (+53 more)
Documentation/latex/: annotated.tex  config_8h.tex  config_8h__dep__incl.md5  config_8h_source.tex  dir_2cab4dcc2ab6c557699ca8eb3a55cc13.tex  dir_35967374c7e2e52320f87cfa6583ade1.tex  dir_8c2f0524fd3199ae61bd6861c056b11a_dep.md5  dir_f95f54253995c99e1778bddc6e8539a9_dep.md5  failures_8c.tex  failures_8c_a09b976185e7e818b4324aee696332f9a_icgraph.md5  failures_8c_a0d2b84537acea4ac18ccc2fa5fdf8005_icgraph.md5  failures_8c_a124dbbcadfb06406cf91d1201bb05c68_cgraph.md5  failures_8c_a124dbbcadfb06406cf91d1201bb05c68_icgraph.md5  failures_8c_a155e0b42be698fd658fea6a0dbb8608b_cgraph.md5  failures_8c_a155e0b42be698fd658fea6a0dbb8608b_icgraph.md5  failures_8c_a30f15834dbe25caba85572e172b9bc77_icgraph.md5  failures_8c_a3484fce8f4223ea262d178cbea751f06_icgraph.md5  failures_8c_a3714f6c2b6cf52e7944ee9352143e105_icgraph.md5  failures_8c_a494682d906c6e4e666f46a15c2aed5eb_icgraph.md5  failures_8c_a497fcda22de215e3e57f4ba889f23675_cgraph.md5  failures_8c_a497fcda22de215e3e57f4ba889f23675_icgraph.md5  failures_8c_a682f1aff804ad2665cb73cb7aa0bb324_cgraph.md5  failures_8c_a7739e18fdabcefcde3ee26001bd58edc_cgraph.md5  failures_8c_a7739e18fdabcefcde3ee26001bd58edc_icgraph.md5  failures_8c_a9b4c0604e27a0e274bb04bf3d34b22d6_cgraph.md5  failures_8c_a9b4c0604e27a0e274bb04bf3d34b22d6_icgraph.md5  failures_8c_aa7a19058315d33f9c47e8628e709d5d4_icgraph.md5  failures_8c_ab58329ba2cc19b5be493a8a632f996f9_icgraph.md5  (+323 more)
MainSource/: UART_Script.py
Nouveau PIR/: Configure.sh  Run.sh  USART_Script.py  script_exemple.sh  test_UART.ps1
TestSource/: test_UART.ps1
Test_USART/: .mxproject  .project  Test_USART.ioc  USART.ioc
Tim4_replacement/: Test.c  Tim5.h
src/interface/: CMakeLists.txt  README.md
src/interface/cmake/: CMakeLists.txt.gtest  CMakeLists.txt.qtwaitingspinner.download
src/interface/src/failures/include/: failures.h
src/interface/src/failures/src/: failures.cpp
src/interface/src/failures/tests/src/: failures-test.cpp
src/interface/src/graphics/: CMakeLists.txt
src/interface/src/graphics/include/: CircleStatusWidget.h  FailureBannerWidget.h  FailureListItem.h  FailureListWidget.h  HistoryModel.h  HistoryTable.h  HistoryTableItem.h  MainWindow.h  StatusBarWidget.h
src/interface/src/graphics/src/: CircleStatusWidget.cpp  FailureBannerWidget.cpp  FailureConfigureWidget.cpp  FailureListItem.cpp  FailureListModel.cpp  FailureListWidget.cpp  HistoryModel.cpp  HistoryTable.cpp  HistoryTableItem.cpp  MainWindow.cpp  StatusBarWidget.cpp
src/interface/src/middleware/: CMakeLists.txt
src/interface/src/middleware/include/: middleware.h
src/interface/src/middleware/src/: main.cpp  middleware.cpp
src/interface/src/results/include/: results.h
src/interface/src/results/src/: results.cpp
src/interface/src/virtualcomport/: CMakeLists.txt
src/interface/src/virtualcomport/include/: virtualcomport.h
src/interface/tests/sim/: CMakeLists.txt  README.md
src/interface/tests/sim/include/: sim.h
src/interface/tests/sim/src/: sim.cpp
src/interface/tools/: install_tools.sh
(+1086 files in other folders)
